--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,35 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../index.html">Home Page</a>
     <h1>I guess i like lasagna</h1>
+    <img src="../images/lasagna.jpg" alt="pic of lasagna">
+
+    <h2>Description</h3>
+    <p>this is a lasagna or smth</p>
+    <p>yes, you heard right, a lasagna</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Tomato Sauce</li>
+        <li>Sugar</li>
+        <li>Spuces</li>
+        <li>Lasagna Noodles</li>
+        <li>Cheeses</li>
+        <li>Eggs</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Make the meat sauce</li>
+        <li>Cook the noodles</li>
+        <li>Make the ricotta mixture</li>
+        <li>Layer the lasagna according to the recipe instructions</li>
+        <li>Cover with foil and bake</li>
+        <li>Let the lasagna rest before serving</li>
+    </ol>
+
 </body>
 </html>
