--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Link to lasagna page</a>
+<body></div>
+    <div class="main-container">
+        <h1>Odin Recipes</h1>
+        <a href="./recipes/lasagna.html">Link to lasagna page</a>
+    </div>
 </body>
 </html>
