--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <a href="../index.html">Home Page</a>
-    <h1>I guess i like lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="pic of lasagna">
+    <div class="info-container">
+        <a href="../index.html">Home Page</a>
+        <h1>Lasagna - Best of the Best</h1>
+        <img src="../images/lasagna.jpg" alt="pic of lasagna" width="250px" height="150px">
+    </div>
 
-    <h2>Description</h3>
-    <p>this is a lasagna or smth</p>
-    <p>yes, you heard right, a lasagna</p>
+    <div class="description-container">
+        <h2>Description</h3>
+        <p>Good lasagna? Never. Lasagna is disgusting....</p>
+        <p>Jk...</p>
+    </div>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Meat</li>
-        <li>Onion and garlic</li>
-        <li>Tomato Sauce</li>
-        <li>Sugar</li>
-        <li>Spuces</li>
-        <li>Lasagna Noodles</li>
-        <li>Cheeses</li>
-        <li>Eggs</li>
-    </ul>
+    <div class="ingredients-container">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Onion and garlic</li>
+            <li>Tomato Sauce</li>
+            <li>Sugar</li>
+            <li>Spuces</li>
+            <li>Lasagna Noodles</li>
+            <li>Cheeses</li>
+            <li>Eggs</li>
+        </ul>
+    </div>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Make the meat sauce</li>
-        <li>Cook the noodles</li>
-        <li>Make the ricotta mixture</li>
-        <li>Layer the lasagna according to the recipe instructions</li>
-        <li>Cover with foil and bake</li>
-        <li>Let the lasagna rest before serving</li>
-    </ol>
+    <div class="steps-container">
+        <h3>Steps</h3>
+        <ol>
+            <li>Make the meat sauce</li>
+            <li>Cook the noodles</li>
+            <li>Make the ricotta mixture</li>
+            <li>Layer the lasagna according to the recipe instructions</li>
+            <li>Cover with foil and bake</li>
+            <li>Let the lasagna rest before serving</li>
+        </ol>
+    </div>
 
 </body>
+
 </html>
