Removed additional closing div tag in index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
-<body></div>
+<body>
     <div class="main-container">
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Link to lasagna page</a>
